# auto-deploy-bank

./: .gitattributes  README.md
services/00025916aedacb90a514b387/: CLAUDE.md  Dockerfile  docker-compose.yaml  metadata.json
services/00bb5a0685372be6bb3bd49d/: CLAUDE.md  Dockerfile  api.py  docker-compose.yaml  metadata.json
services/016b5b98ba13e53fae2d9d91/: CLAUDE.md  Dockerfile  docker-compose.yaml  metadata.json
services/01c455fcbda081e9bf38bfe0/: CLAUDE.md  Dockerfile  docker-compose.yaml  metadata.json
services/01e65688a986574681a969c8/: CLAUDE.md  Dockerfile  docker-compose.yaml  metadata.json
services/01e7535b89e66e1ab78db48b/: CLAUDE.md  Dockerfile  docker-compose.yaml  metadata.json
services/0204571887031482b7da639d/: CLAUDE.md  Dockerfile  docker-compose.yaml  metadata.json
services/021b5d9db1de51498789b3b7/: metadata.json
services/0229521e86f5fa498425bf8d/: CLAUDE.md  Dockerfile  docker-compose.yaml  (+1 more)
services/6022569a8a483a469b59535e/: .env.example  CLAUDE.md  Dockerfile  app.py  docker-compose.yaml  metadata.json  pyproject.toml
services/6022569a8a483a469b59535e/dotnet/samples/Demos/QualityCheck/python-server/: Dockerfile
services/6022569a8a483a469b59535e/dotnet/samples/Demos/QualityCheck/python-server/app/: main.py
services/6022569a8a483a469b59535e/python/: .env  Dockerfile  docker-compose.yaml
services/6022569a8a483a469b59535e/python/samples/demos/process_with_dapr/: Dockerfile  docker-compose.yaml  fastapi_app.py  requirements.txt
services/6022569a8a483a469b59535e/python/samples/demos/service/: __init__.py  main.py
(+3973 files in other folders)
